# measurement_data_solution

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_CONFIG.md  PROJECT_STATUS.md  README.md  doxy  mds.cmake.in  vcpkg.json
.github/workflows/: c-cpp.yml
aquisition/: CMakeLists.txt
core/: CMakeLists.txt
core/engine/: CMakeLists.txt
core/engine/include/core/: ConfigurationManager.hpp  DistributionManager.hpp  Engine.hpp  MeasurementObjectFactory.hpp
core/engine/include/statistics/: DistributionStatistics.hpp
core/engine/include/utilis/: LibUtility.hpp
core/engine/source/: ConfigurationManager.cxx  DistributionManager.cxx  Engine.cxx  Watchdog.hpp
core/engine/test/: CMakeLists.txt
core/engine/test/source/: CoreTestFramework.hpp
core/include/: Distribution.hpp  MiniMTS.hpp  MiniObjectDefs.hpp  visibility.h
core/include/core/: ConfigurationManager.hpp  DistributionManager.hpp  Engine.hpp  MeasurementObjectFactory.hpp
core/include/utilis/: LibUtility.hpp
core/logger/include/: LogRegistry.hpp
core/logger/source/: Logger.cxx
core/source/: ConfigurationManager.cxx  DistributionManager.cxx  Engine.cxx  MeasurementObjectFactory.cxx
core/test/: CMakeLists.txt
core/test/source/: CoreInitializationTest.cxx  CoreTestFramework.hpp  main.cxx
definitions/: doxy
definitions/include/: Distribution.hpp  Log.hpp  MiniMTS.hpp  MiniObjectDefs.hpp  visibility.h
documentation/: Interface_definitions.rtf
receivers/dummy/: CMakeLists.txt
receivers/dummy/include/: DummyObject.hpp
receivers/dummy/source/: DummyObject.cxx
replay/: CMakeLists.txt  doxy
replay/include/: PlayerDefs.hpp
replay/include/replay/: Player.hpp  PlayerObject.hpp
source/: README.md
source/application/: CMakeLists.txt  README.md
source/application/source/: DataVisualizer.cxx  DataVisualizer.hpp  DistributionVisualizer.cxx  DistributionVisualizer.hpp  Visualizer.hpp  main.cxx  main_cli.cxx
source/core/: doxy
source/core/engine/: CMakeLists.txt  README.md
source/core/engine/source/: CPUMonitor.cxx  CPUMonitor.hpp  ConfigurationManager.cxx  DistributionManager.cxx  Engine.cxx  EngineObject.cxx  MeasurementObjectFactory.cxx  MemoryVisualization.cxx  MemoryVisualization.hpp  SignalExtraction.cxx  SignalExtraction.hpp  Watchdog.cxx  Watchdog.hpp  pch.h
source/core/engine/test/: CMakeLists.txt
source/core/logger/: CMakeLists.txt  README.md
source/core/logger/include/: Logger.hpp
source/core/logger/source/: LogRegistry.cxx  Logger.cxx
source/data_sources/: CMakeLists.txt
source/data_sources/raw_data_generator/: CMakeLists.txt
source/data_sources/raw_data_generator/include/transmitters/: DummyObject.hpp
source/data_sources/raw_data_generator/source/: DummyObject.cxx
source/data_sources/wave_data_generator/: CMakeLists.txt
source/data_sources/wave_data_generator/include/data_source/: WaveDataGenerator.hpp
source/data_sources/wave_data_generator/source/: WaveDataGenerator.cxx
source/data_visualization/: CMakeLists.txt
source/data_visualization/raw_data_visualization/include/: RawDataProcessor.hpp
source/data_visualization/raw_data_visualization/source/: RawDataProcessor.cxx
source/data_visualization/raw_processor/include/: RawDataProcessor.hpp
source/data_visualization/raw_processor/source/: RawDataProcessor.cxx
source/data_visualization/wave_visualizer/: CMakeLists.txt
source/data_visualization/wave_visualizer/include/: WaveVisualizer.hpp
source/data_visualization/wave_visualizer/source/: WaveVisualizer.cxx
source/definitions/: README.md  doxy
source/definitions/include/: Log.hpp  MdsInterface.hpp  MiniMTS.hpp  MiniObjectDefs.hpp  Receiver.hpp
source/definitions/include/defs/: Configuration.hpp  DataPackage.hpp  Distribution.hpp  GuiDefs.hpp  MdsInterface.hpp  MeasurementObjectDefs.hpp  MiniObjectDefs.hpp  Receiver.hpp
source/processors/: CMakeLists.txt
source/processors/raw_processor/: CMakeLists.txt
source/processors/raw_processor/include/: RawDataProcessor.hpp
source/processors/raw_processor/source/: RawDataProcessor.cxx
source/receivers/: CMakeLists.txt  doxy
source/receivers/dummy/source/: DummyObject.cxx
source/receivers/udp/: CMakeLists.txt
source/receivers/udp/include/: visibility.h
source/receivers/udp/source/: UdpReceiver.cxx
source/recording/: CMakeLists.txt  README.md  doxy
source/replay/: CMakeLists.txt  README.md  doxy
source/replay/include/: PlayerDefs.hpp
source/replay/include/replay/: Player.hpp  PlayerObject.hpp
source/replay/player/: CMakeLists.txt
source/replay/player/include/: PlayerDefs.hpp  visibility.h
source/replay/player/include/replay/: Player.hpp  PlayerObject.hpp
source/replay/player/source/: Player.cxx  PlayerObject.cxx  pch.h
source/replay/reader/: CMakeLists.txt
source/replay/reader/asc/: CMakeLists.txt
source/replay/reader/asc/test/: pch.h  (+3 more)
source/test/: CMakeLists.txt  README.md
source/test/source/: EngineTests.cxx  EngineUtilis.hpp  main.cxx
source/transmitters/: CMakeLists.txt  doxy
source/transmitters/camera/: CMakeLists.txt
source/transmitters/camera/include/: visibility.h
source/transmitters/camera/include/transmitters/: CameraAquisition.hpp  CameraObject.hpp  CameraProcessor.hpp
source/transmitters/camera/source/: CameraAquisition.cxx  CameraObject.cxx  CameraProcessor.cxx
source/transmitters/dummy/: CMakeLists.txt
source/transmitters/dummy/include/transmitters/: DummyObject.hpp
source/transmitters/dummy/source/: DummyObject.cxx
source/transmitters/dummy/test/: CMakeLists.txt
source/transmitters/dummy/test/source/: TransmitterInitTest.cxx  TransmitterTestFramework.hpp
source/transmitters/udp/: CMakeLists.txt
source/transmitters/udp/include/: visibility.h
source/transmitters/udp/include/udp/: UdpTransmitter.hpp
source/transmitters/udp/source/: UdpTransmitter.cxx  pch.h
source/transmitters/usb/include/: visibility.h
source/utilis/: CMakeLists.txt  doxy
transmitters/: CMakeLists.txt
transmitters/dummy/: CMakeLists.txt
transmitters/dummy/source/: DummyObject.cxx
utilis/: CMakeLists.txt
utilis/parser/xml/: CMakeLists.txt
(+24 files in other folders)
