#######################################################
# project definition                                  #
#######################################################
#   setting the project name, version and language
project(utilis VERSION 0.1.0)

add_subdirectory(parser/json)
add_subdirectory(parser/xml)