#######################################################
# project definition                                  #
#######################################################
#   setting the project name, version and language
project(transmitters     VERSION 0.1.0
    DESCRIPTION "Project description"
    HOMEPAGE_URL "https://github.com/AndreiTurean/measurement_data_solution"
    LANGUAGES CXX)

add_subdirectory(dummy)
add_subdirectory(camera)